<resources>
    <string name="app_name">MyFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_descprition">The app will help you to easily manage all the gricerues you have at home and not waste neither food nor time :)</string>
    <string name="welcome_title">Welcome</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="register">Register</string>
    <string name="minimum_password">Password must contain at least 6 characters</string>
    <string name="auth_failed">Authorization failed</string>
    <string name="product_info_edit">Edit</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="weight">Weight</string>
    <string name="place_of_storing">Place of storing</string>
    <string name="my_food">My food</string>
    <string name="date_of_expiry">Date of expiry</string>
    <string name="list_name">List Name</string>
    <string name="to_buy">To Buy</string>
    <string name="find_recipes_with_this_product">Find recipes with this product</string>
    <string name="e_g_appartment_cottage_camp">e.g. Appartment, Cottage, Camp</string>
    <string name="enter_a_name_of_a_shopping_list">Enter a name of a shopping list</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_a_product_name">Enter a product name</string>
    <string name="e_g_eggs_tomatoes_milk">e.g. eggs, tomatoes, milk</string>
</resources>