<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialogEditBtn"
            android:text="@string/edit"
            android:textColor="@color/light_green"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/dialogCloseBtn"
            android:text="@string/close"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/light_green"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgray"/>
    <TextView
        android:id="@+id/dialog_product_info_name"
        android:text="Product Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:layout_margin="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_of_storing"
                android:layout_margin="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_expiry"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right">

            <TextView
                android:id="@+id/dialog_product_info_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/dialog_product_info_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_of_storing"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/dialog_product_info_expire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="yyyy-mm-dd"
                android:layout_margin="8dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>